Fixes misalignment with site brand

--- a/src/assets/css/7-components/_header.scss
+++ b/src/assets/css/7-components/_header.scss
@@ -6,7 +6,6 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        align-items: center;
         max-width: var(--container-max-width);
         margin: 0 auto;
         padding: 2rem 1rem; // fallback
